# oidc2fer

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  .sops.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  Tiltfile  all-fqdns.txt  all-idps.txt  compose.yaml  current-fqdns.txt  docker-compose.yml  new-fqdns.txt  newnew-fqdns.txt  old-fqdns.txt  pyproject.toml  pytest.ini  renovate.json  start-kind.sh  wayf-idps.txt
.github/ISSUE_TEMPLATE/: Bug_report.md  Support_question.md
.github/workflows/: build-docker.yml  ci-tests.yml  docker-hub.yml  helmfile-linter.yml  oidc2fer.yml  secrets.enc.env
crowdin/: config.yml
docker/auth/: realm.json
docker/files/etc/nginx/conf.d/: default.conf
docker/files/usr/local/etc/gunicorn/: oidc2fer.py  satosa.py
docker/oidc-test-client/: Dockerfile  app.py  requirements.txt
docs/: architecture.md
env.d/development/: common.dist  kc_postgresql.dist  postgresql.dist  satosa.dist
gitlint/: gitlint_emoji.py
scripts/: process_renater_csv.py
src/backend/: MANIFEST.in  manage.py  pyproject.toml
src/backend/core/: admin.py  factories.py  models.py
src/backend/core/migrations/: 0001_initial.py
src/backend/core/tests/: test_models_users.py
src/backend/demo/management/commands/: createsuperuser.py
src/backend/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
src/backend/oidc2fer/: settings.py  urls.py  wsgi.py
src/helm/: helmfile.yaml  helmfile.yaml.gotmpl
src/helm/env.d/cnb-dev/: secrets.enc.yaml  values.oidc2fer.yaml.gotmpl
src/helm/env.d/cnb-staging/: secrets.enc.yaml  values.oidc2fer.yaml.gotmpl
src/helm/env.d/dev/: secrets.enc.yaml  values.oidc-test-client.yaml.gotmpl  values.oidc2fer.yaml.gotmpl
src/helm/env.d/outscale-production/: secrets.enc.yaml  values.oidc2fer.yaml.gotmpl
src/helm/env.d/staging/: secrets.enc.yaml  values.oidc2fer.yaml.gotmpl
src/helm/extra/: Chart.yaml
src/helm/oidc-test-client/: Chart.yaml  values.yaml
src/helm/oidc-test-client/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
src/helm/oidc2fer/: Chart.yaml  values.yaml
src/helm/oidc2fer/templates/: _helpers.tpl  ingress.yaml  satosa_deployment.yaml  satosa_svc.yaml  secrets.yaml
src/oidc2fer/: wsgi.py
src/oidc2fer/attribute_generators/: __init__.py
src/oidc2fer/frontends/: jwt_userinfo_openid_connect.py
src/satosa/: .pylintrc  internal_attributes.yaml  proxy_conf.yaml  pyproject.toml  pytest.ini  setup.py
src/satosa/config/cnb/: internal_attributes.yaml
src/satosa/config/cnb/plugins/backends/: saml2_backend.yaml
src/satosa/config/cnb/plugins/frontends/: openid_connect_frontend.yaml
src/satosa/config/cnb/plugins/microservices/: attribute_processor.yaml  primary_identifier.yaml  static_attributes.yaml
src/satosa/config/cnb/static/: index.html
src/satosa/config/fer/: internal_attributes.yaml
src/satosa/config/fer/plugins/frontends/: openid_connect_frontend.yaml
src/satosa/config/fer/plugins/microservices/: attribute_authorization.yaml  attribute_processor.yaml  filter_attributes.yaml  primary_identifier.yaml  siret_mapping.yaml  static_attributes.yaml
src/satosa/oidc2fer/: wsgi.py
src/satosa/oidc2fer/attribute_generators/: entity_id_to_siret_mapper.py
src/satosa/oidc2fer/attribute_processors/: flattening_processor.py
src/satosa/oidc2fer/authorization/: __init__.py  affiliation_checker.py
src/satosa/plugins/backends/: saml2_backend.yaml
src/satosa/plugins/frontends/: openid_connect_frontend.yaml
src/satosa/plugins/microservices/: affiliation_checker.yaml  attribute_authorization.yaml  primary_identifier.yaml
src/satosa/static/: index.html
src/satosa/tests/: test_dummy.py  test_e2e.py
src/satosa/tests/oidc2fer/attribute_generators/: test_entity_id_to_siret_mapper.py
src/satosa/tests/oidc2fer/authorization/: test_affiliation_checker.py
tests/oidc2fer/attribute_processors/: test_flattening_processor.py
